# asdf-compression

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: build.yml  ci.yml
asdf_compression/: _utils.py  _version.py  extensions.py
asdf_compression/_tests/: test_labels.py
asdf_compression/bls2/: compressor.py  extensions.py
asdf_compression/blsc/: compressor.py  extensions.py
asdf_compression/lz4/: compressor.py  extensions.py
asdf_compression/lz4f/: __init__.py  compressor.py  extensions.py
asdf_compression/zstd/: extensions.py
asdf_zstd/: compressor.py  extensions.py
asdf_zstd/tests/: test_zstd.py
