[project]
name = "asdf_zstd"
description = "Asdf extension to support Zstandard compression"
readme = 'README.rst'
license = { file = 'LICENSE' }
authors = [{ name = 'The ASDF Developers', email = 'help@stsci.edu' }]
requires-python = '>=3.9'
classifiers = [
  'Development Status :: 5 - Production/Stable',
  "License :: OSI Approved :: BSD License",
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
]
dynamic = [
  'version',
]
dependencies = [
  "asdf >= 2.15",
  "zstandard >= 0.21.0",
]

[project.optional-dependencies]
tests = [
  "pytest>=6",
]

[project.urls]
'documentation' = 'https://asdf-zstd.readthedocs.io/en/latest'
'repository' = 'https://github.com/braingram/asdf-zstd'
'tracker' = 'https://github.com/braingram/asdf-zstd/issues'

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
  "setuptools>=60",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]

[project.entry-points]
'asdf.extensions' = {asdf = 'asdf_zstd.extensions:get_extensions'}

[tool.setuptools.packages.find]
include = ["asdf_zstd*"]
namespaces = false

[tool.setuptools_scm]
write_to = "asdf_zstd/_version.py"

[tool.black]
line-length = 120
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
    | asdf/extern
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
addopts = '--color=yes'

[tool.ruff]
line-length = 120

[tool.codespell]
skip="*.pdf,*.asdf,.tox,.git,docs/_build"
